# artfeed

./: .gitignore  .pre-commit-config.yaml  README.md  eslint.config.mjs  jest.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
.github/workflows/: ci.yml
ingestion/: __init__.py  aic_client.py  load_to_db.py  met_client.py  models.py  pipeline.py  requirements.txt
ingestion/tests/: test_loader.py  test_normalization.py
src/: app.module.ts  main.ts
src/artworks/: artwork.entity.ts  artwork_embedding.entity.ts  artworks.controller.ts  artworks.module.ts  artworks.service.ts  types.ts
src/auth/: auth-user.interface.ts  auth.controller.ts  auth.module.ts  current-user.decorator.ts  jwt.strategy.ts
src/database/: data-source.ts  database.config.ts  revert-last-migration.ts  run-migrations.ts
src/feed/: feed.controller.ts  feed.module.ts  feed.service.ts  feed_impression.entity.ts
src/ingestion/: ingestion-api-key.guard.ts  ingestion.controller.ts  ingestion.module.ts  ingestion.service.ts
src/interactions/: interaction.entity.ts  interactions.controller.ts  interactions.module.ts  interactions.service.ts
src/metrics/: metrics.controller.ts  metrics.service.ts
src/recommendation/: personalization.port.ts  recommendation.module.ts  recommendation.service.ts
src/users/: user.entity.ts  (+3 more)
test/: auth.controller.spec.ts  database.config.spec.ts  feed.controller.spec.ts  ingestion.controller.spec.ts  interactions.service.spec.ts  metrics.controller.spec.ts  recommendation.service.spec.ts
(+9 files in other folders)
