[project]
name = "artfeed-ingestion"
version = "0.1.0"
description = "Python ingestion utilities for Artfeed"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.28",
    "pre-commit>=4.0,<5",
    "ruff>=0.6,<0.7",
    "pytest>=8.3,<9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
preview = true

[tool.uv]
package = false
